// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> fill renders a color filled icon 1`] = `
<div>
  <svg
    data-testid="ds-icon"
    fill="rgba(22, 47, 86, 0.87)"
    height="20"
    viewBox="0 0 24 24"
    width="20"
  >
    <path
      d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
    />
  </svg>
</div>
`;

exports[`<Icon /> size renders a medium icon 1`] = `
<div>
  <svg
    data-testid="ds-icon"
    fill="rgba(22, 47, 86, 0.38)"
    height="20"
    viewBox="0 0 24 24"
    width="20"
  >
    <path
      d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
    />
  </svg>
</div>
`;

exports[`<Icon /> size renders a small icon 1`] = `
<div>
  <svg
    data-testid="ds-icon"
    fill="rgba(22, 47, 86, 0.38)"
    height="16"
    viewBox="0 0 24 24"
    width="16"
  >
    <path
      d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
    />
  </svg>
</div>
`;
